# socket

./: .gitignore  .mcp.json  ACCESSIBILITY.md  AGENTS.md  AGENT_SKILLS_REPORT.md  API.md  COMMERCIAL-USE.md  CONTRIBUTING.md  DCO.md  IMPLEMENTATION_AUDIT.md  LICENSE  LICENSE-HISTORICAL-APACHE-2.0  Makefile  NOTICE  Package.resolved  Package.swift  README.md  ROADMAP.md  TODO.md  WORKFLOWS.md  pyproject.toml  skills.sh.json
.agents/socket-steward/: README.md  pyproject.toml
.agents/socket-steward/docs/: prompt.md
.agents/socket-steward/evals/: README.md  cases.jsonl  run_local.py
.agents/socket-steward/src/socket_steward/: __init__.py  agent.py  audit.py  cli.py  plan.py  proposal.py  workflow.py
.agents/socket-steward/tests/: test_audit.py
plugins/agent-plugin-skills/: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  ROADMAP.md  pyproject.toml
plugins/agent-plugin-skills/.claude-plugin/: plugin.json
plugins/agent-plugin-skills/.codex-plugin/: plugin.json
plugins/agent-plugin-skills/.codex/agents/: skills-repo-guidance-sync.toml
plugins/agent-plugin-skills/docs/maintainers/: codex-plugin-install-surfaces.md  codex-subagent-skill-guidance.md  reality-audit.md  workflow-atlas.md
plugins/agent-plugin-skills/skills/bootstrap-skills-plugin-repo/: SKILL.md
plugins/agent-plugin-skills/skills/install-plugin-to-socket/: SKILL.md
plugins/agent-plugin-skills/skills/maintain-plugin-docs/: SKILL.md
plugins/agent-plugin-skills/skills/maintain-plugin-repo/: SKILL.md
plugins/agent-plugin-skills/skills/sync-skills-repo-guidance/: SKILL.md
plugins/agent-plugin-skills/skills/validate-plugin-install-surfaces/: SKILL.md
plugins/apple-dev-skills/: .gitignore  .mcp.json  AGENTS.md  CONTRIBUTING.md  README.md  ROADMAP.md  pyproject.toml
plugins/apple-dev-skills/.agents/plugins/: marketplace.json
plugins/apple-dev-skills/.claude-plugin/: marketplace.json  plugin.json
plugins/apple-dev-skills/.codex-plugin/: plugin.json
plugins/apple-dev-skills/.codex/agents/: swift-steward.toml
plugins/apple-dev-skills/.codex/environments/: environment.toml
plugins/apple-dev-skills/.github/scripts/: sync_shared_snippets.sh  validate_repo_docs.sh  validate_skill_creator_contract.py
plugins/apple-dev-skills/.github/workflows/: validate-docs-and-skills.yml
plugins/apple-dev-skills/docs/maintainers/: app-extension-workflows-plan.md  apple-ui-accessibility-workflow-plan.md  author-swift-docc-docs-plan.md  customization-consolidation-review.md  execution-split-and-inference-plan.md  reality-audit.md  swift-package-index-workflow-research.md  swiftui-app-architecture-workflow-plan.md  workflow-atlas.md  workflow-guidance-preservation-matrix.md
plugins/apple-dev-skills/shared/agents-snippets/: apple-swift-package-core.md  apple-xcode-project-core.md
plugins/apple-dev-skills/shared/references/: apple-camera-capability-contract.md  apple-image-type-ownership.md  apple-media-type-ownership.md  apple-spatial-data-privacy-contract.md  apple-vision-analysis-contract.md  code-coverage-contract.md
plugins/apple-dev-skills/skills/app-extension-architecture-workflow/: SKILL.md
plugins/apple-dev-skills/skills/app-intents-workflow/: SKILL.md
plugins/apple-dev-skills/skills/appkit-app-architecture-workflow/: SKILL.md
plugins/apple-dev-skills/skills/apple-developer-provisioning-workflow/: SKILL.md
plugins/apple-dev-skills/skills/apple-image-representation-workflow/: SKILL.md
plugins/apple-dev-skills/skills/apple-runtime-telemetry-workflow/: SKILL.md
plugins/apple-dev-skills/tests/: test_app_extension_workflows.py  test_appkit_app_architecture_workflow.py  test_apple_developer_provisioning_workflow.py  test_apple_ui_accessibility_workflow.py  test_arkit_spatial_face_body_workflows.py  test_bootstrap_workflow.py  test_camera_capture_depth_workflow.py  test_core_animation_typography_workflows.py  test_customization_cli.py  test_customization_consolidation_review.py  test_customization_template_paths.py  test_design_animation_symbol_workflows.py  test_devicecheck_app_attest_workflow.py  test_explore_apple_swift_docs_workflow.py  test_format_swift_sources_export.py  test_github_repository_settings_handoffs.py  test_imaging_foundation_workflows.py  test_macos_platform_security_workflows.py  test_macos_virtualization_workflows.py  test_media_audio_workflows.py  test_media_expansion_audit.py  test_milestone24_system_ui_workflows.py  test_photos_library_editing_workflow.py  test_repo_docs_validator.py  test_safari_extension_control_workflow.py  test_safari_mcp_workflow.py  test_structure_swift_sources_file_headers.py  test_structure_swift_sources_todo_fixme_ledgers.py  test_structure_swift_sources_workflow.py  test_swift_cleanup_skill_boundaries.py  test_swift_package_build_run_workflow.py  test_swift_package_extension_workflow.py  test_swift_package_guidance_sync_workflow.py  test_swift_package_testing_workflow.py  test_swift_package_workflow.py  test_swiftui_app_architecture_workflow.py  test_swiftui_component_audit_workflow.py  test_tipkit_workflow.py  test_tvos_workflows.py  test_video_codec_processing_workflow.py  (+12 more)
plugins/cardhop-app/mcp/: .gitignore  README.md  pyproject.toml
plugins/productivity-skills/: .gitignore  .mcp.json  AGENTS.md  CONTRIBUTING.md  README.md  ROADMAP.md  pyproject.toml
plugins/productivity-skills/.claude-plugin/: plugin.json
plugins/productivity-skills/.codex-plugin/: plugin.json
plugins/python-skills/: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  ROADMAP.md  pyproject.toml
plugins/python-skills/.claude-plugin/: marketplace.json  plugin.json
plugins/python-skills/.codex-plugin/: plugin.json
plugins/python-skills/scripts/: __init__.py  validate_repo_metadata.py
plugins/python-skills/tests/: test_plugin_smoke.py  test_validate_repo_metadata.py
plugins/things-app/: .mcp.json  AGENTS.md  CONTRIBUTING.md  README.md  ROADMAP.md  claude.mcp.json  pyproject.toml
plugins/things-app/.claude-plugin/: plugin.json
plugins/things-app/.codex-plugin/: plugin.json
plugins/things-app/mcp/: README.md  pyproject.toml
(+2232 files in other folders)
