[project]
name = "socket-maintenance"
version = "9.15.0"
description = "Root uv tooling baseline for the socket superproject."
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
  "mypy>=1.20.1",
  "pytest>=9.0.3",
  "PyYAML>=6.0.0",
  "ruff>=0.14.0",
  "types-PyYAML>=6.0.12.20250915",
]

[tool.pytest.ini_options]
testpaths = [
  "tests",
  "plugins/agent-portability-skills/skills/bootstrap-skills-plugin-repo/tests",
  "plugins/agent-portability-skills/skills/sync-skills-repo-guidance/tests",
  "plugins/productivity-skills/skills/maintain-project-repo/tests",
]

[tool.mypy]
files = [
  "scripts",
  "tests",
  "plugins/agent-portability-skills/skills/bootstrap-skills-plugin-repo/scripts",
  "plugins/agent-portability-skills/skills/bootstrap-skills-plugin-repo/tests",
  "plugins/agent-portability-skills/skills/sync-skills-repo-guidance/scripts",
  "plugins/agent-portability-skills/skills/sync-skills-repo-guidance/tests",
  "plugins/productivity-skills/skills/maintain-project-repo/scripts",
  "plugins/productivity-skills/skills/maintain-project-repo/tests",
]
