[project]
name = "apple-dev-skills-maintainer"
version = "9.9.0"
description = "Maintainer tooling for the apple-dev-skills repository"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
  "pytest>=9.0.3",
  "PyYAML>=6.0.2,<7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
package = false
