[project]
name = "productivity-skills-maintenance"
version = "8.1.0"
description = "Maintainer-only Python tooling baseline for productivity-skills."
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
  "pytest>=9.0.0",
  "mypy>=1.19.0",
  "PyYAML>=6.0.0",
  "types-PyYAML>=6.0.12.20250915",
]

[tool.pytest.ini_options]
testpaths = [
  "skills/design-agent-eval-workflow/tests",
  "skills/design-agent-automation-workflow/tests",
  "skills/dice-job-search-workflow/tests",
  "skills/maintain-project-agents/tests",
  "skills/maintain-project-accessibility/tests",
  "skills/maintain-project-api/tests",
  "skills/maintain-project-architecture/tests",
  "skills/maintain-project-readme/tests",
  "skills/maintain-project-contributing/tests",
  "skills/maintain-project-docs/tests",
  "skills/maintain-project-roadmap/tests",
  "skills/maintain-github-repository/tests",
  "skills/maintain-project-repo/tests",
]
