[project]
name = "python-skills-maintainer"
version = "1.5.1"
description = "Maintainer tooling for the python-skills repository"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
  "pytest>=8.4.1,<9",
  "PyYAML>=6.0.2,<7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
package = false
