[project]
name = "python-skills-maintainer"
version = "9.21.0"
description = "Maintainer tooling for the python-skills repository"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
  "mypy>=1.20.1",
  "pytest>=9.0.3",
  "PyYAML>=6.0.2,<7",
  "ruff>=0.14.0",
  "types-PyYAML>=6.0.12.20250915",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
package = false
