[project]
name = "things-app-maintenance"
version = "6.0.8"
description = "Maintainer-only Python tooling baseline for things-app skills and plugin packaging."
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
  "pytest>=9.0.0",
  "PyYAML>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = [
  "skills/things-digest-generator/tests",
]
