[project]
name = "cardhop-app-mcp"
version = "6.6.2"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.0.2",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=9.0.2",
    "ruff>=0.13.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
pretty = true
mypy_path = "."
